--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,3 +5,28 @@
 
 // Стили для файла с примером HTML-фрагмента
 @import './example';
+@import './basis/var';
+@import './basis/normalize';
+@import './basis/reset';
+@import './mixin/mixin';
+
+
+@import './components/header';
+@import './components/hero';
+@import './components/products';
+@import './components/about';
+@import './components/advantages';
+@import './components/gallery';
+@import './components/customer_reviews';
+@import './components/contacts';
+@import './components/footer';
+
+
+
+
+
+
+
+
+
+
