added  meta ico

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,7 +8,7 @@
 @import './basis/var';
 @import './basis/normalize';
 @import './basis/reset';
-@import './mixin/mixin';
+@import './utils/mixin';
 
 
 @import './components/header';
