--- a/src/sass/basis/_reset.scss
+++ b/src/sass/basis/_reset.scss
@@ -14,7 +14,7 @@ h1,
 h2,
 h3,
 p {
-  margin: 0 0 0 0;
+  margin: 0;
 }
 img {
   max-width: 100%;
@@ -25,6 +25,7 @@ button {
   display: block;
   padding: 0;
   border: none;
+  cursor:pointer;
 }
 
 
