--- a/src/sass/basis/_var.scss
+++ b/src/sass/basis/_var.scss
@@ -3,4 +3,6 @@ $mobile: 480px;
 $tablet: 768px;
 $desktop: 1280px;
 
-$main-color: #FFB8CA
+$main-color: #FFB8CA;
+$menu-color: #E17992;
+$second-color: #FFA5BA;
