--- a/src/partials/picture/bolvanka.html
+++ b/src/partials/picture/bolvanka.html
@@ -1,40 +1,40 @@
  <picture>
           <source
-            srcset="images/portfolio/l/pf_9.webp 1x, images/portfolio/l/pf_9@2.webp 2x"
-            alt="Пример работ Growing Business"
+            srcset="images/hero/l/ice-creame.webp 1x, images/hero/l/ice-creame@2x.webp 2x"
+            alt="ICEREAME"
             media="(min-width: 1200px)"
             type="image/webp"
           />
           <source
-            srcset="images/portfolio/l/pf_9.jpg 1x, images/portfolio/l/pf_9@2.jpg 2x"
-            alt="Пример работ Growing Business"
+            srcset="images/hero/l/ice-creame.png 1x, images/hero/l/ice-creame@2x.png 2x"
+            alt="ICEREAME"
             media="(min-width: 1200px)"
             type="image/jpeg"
           />
           <source
-            srcset="images/portfolio/m/pf_9.webp 1x, images/portfolio/m/pf_9@2.webp 2x"
-            alt="Пример работ Growing Business"
+            srcset="images/hero/m/ice-creame.webp 1x, images/hero/m/ice-creame@2x.webp 2x"
+            alt="ICEREAME"
             media="(min-width: 768px)"
             type="image/webp"
           />
           <source
-            srcset="images/portfolio/m/pf_9.jpg 1x, images/portfolio/m/pf_9@2.jpg 2x"
-            alt="Пример работ Growing Business"
+            srcset="images/hero/m/ice-creame.png 1x, images/hero/m/ice-creame@2x.png 2x"
+            alt="ICEREAME"
             media="(min-width: 768px)"
             type="image/jpeg"
           />
           <source
-            srcset="images/portfolio/s/pf_9.webp 1x, images/portfolio/s/pf_9@2.webp 2x"
-            alt="Пример работ Growing Business"
+            srcset="images/hero/s/ice-creame.webp 1x, images/hero/s/ice-creame@2x.webp 2x"
+            alt="ICEREAME"
             media="(max-width: 767px)"
             type="image/webp"
           />
           <source
-            srcset="images/portfolio/s/pf_9.jpg 1x, images/portfolio/s/pf_9@2.jpg 2x"
-            alt="Пример работ Growing Business"
+            srcset="images/hero/s/ice-creame.png 1x, images/hero/s/ice-creame@2x.png 2x"
+            alt="ICEREAME"
             media="(max-width: 767px)"
             type="image/jpeg"
           />
 
-          <img src="images/portfolio/s/pf_9.jpg" alt="Пример работ Growing Business" />
+          <img src="images/hero/s/ice-creame.png" alt="ICEREAME" />
         </picture>
