Added var + class hidden

--- a/src/sass/basis/_var.scss
+++ b/src/sass/basis/_var.scss
@@ -6,3 +6,21 @@ $desktop: 1280px;
 $main-color: #FFB8CA;
 $menu-color: #E17992;
 $second-color: #FFA5BA;
+
+
+$font-primary: "DM Sans";
+$font-primary-rezerv: "sans-serif";
+$font-titel: "Titan One";
+
+
+$color-font-main: #000000;
+$color-font-second: #907E82;
+$color-font-calendar: #FFA5BA;
+
+$color-font-red: #D41443;
+$color-font-white:  #FFFFFF;
+;
+$color-font-span:  #FFA5BA;
+;
+
+
