--- a/src/sass/basis/_normalize.scss
+++ b/src/sass/basis/_normalize.scss
@@ -1,3 +1,22 @@
-.container{
-    min-width: 320px;
+.container {
+  padding: 0 15px;
+  margin: 0 auto;
+  min-width: 320px;
+  @media screen and (min-width: 480px) {
+    width: 480px;
+  }
+  @media screen and (min-width: 768px) {
+    width: 768px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 1200px;
+  }
+}
+
+.visually-hidden {
+  position: absolute;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
 }
