--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -6,7 +6,7 @@
 // Стили для файла с примером HTML-фрагмента
 @import './example';
 @import './basis/var';
-@import './basis/normalize';
+@import './basis/default';
 @import './basis/reset';
 @import './utils/mixin';
 
