--- a/src/sass/basis/_reset.scss
+++ b/src/sass/basis/_reset.scss
@@ -1,6 +1,8 @@
 body {
 //   background-color: var(--bcg-main);
 //   font-family: var(--font-primary), var(--font-primary-rezerv);
+  font-style: normal;
+  font-weight: 400;
 }
 a {
   text-decoration: none;
