--- a/src/sass/basis/_var.scss
+++ b/src/sass/basis/_var.scss
@@ -3,24 +3,22 @@ $mobile: 480px;
 $tablet: 768px;
 $desktop: 1280px;
 
-$main-color: #FFB8CA;
-$menu-color: #E17992;
-$second-color: #FFA5BA;
+$main-color: #ffb8ca;
 
+// about, _advantages, galery gradient, foter , contact
+$section-color: #fff5f6;
 
-$font-primary: "DM Sans";
-$font-primary-rezerv: "sans-serif";
-$font-titel: "Titan One";
+$menu-color: #e17992;
+$second-color: #ffa5ba;
 
+$font-primary: 'DM Sans';
+$font-primary-rezerv: 'sans-serif';
+$font-titel: 'Titan One';
 
 $color-font-main: #000000;
-$color-font-second: #907E82;
-$color-font-calendar: #FFA5BA;
+$color-font-second: #907e82;
+$color-font-calendar: #ffa5ba;
 
-$color-font-red: #D41443;
-$color-font-white:  #FFFFFF;
-;
-$color-font-span:  #FFA5BA;
-;
-
-
+$color-font-red: #d41443;
+$color-font-white: #ffffff;
+$color-font-span: #ffa5ba; ;
