add title scss adnd var

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,7 +10,6 @@
 @import './basis/reset';
 @import './utils/mixin';
 
-
 @import './components/header';
 @import './components/hero';
 @import './components/products';
@@ -21,12 +20,4 @@
 @import './components/contacts';
 @import './components/footer';
 
-
-
-
-
-
-
-
-
-
+@import './components/title';
