--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,5 +1,7 @@
-<p>
-  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur incidunt assumenda
-  exercitationem dicta! Harum incidunt ipsa sequi perspiciatis veniam, aperiam, ratione vel aliquid
-  autem necessitatibus quaerat in qui unde officia.
-</p>
+<section class="contacts">
+  <p>
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur incidunt assumenda
+    exercitationem dicta! Harum incidunt ipsa sequi perspiciatis veniam, aperiam, ratione vel
+    aliquid autem necessitatibus quaerat in qui unde officia.
+  </p>
+</section>
