--- a/src/partials/components/button.html
+++ b/src/partials/components/button.html
@@ -1,3 +1,7 @@
+<h2>Зразок кнопок для команди</h2>
+
+<p>Думаю на час розробки варто заінклудити вкінці проекту, щоб люди могли бачити і використовувати</p>
+
 <button class="red-button button">Read more</button>
 <button class="white-button button">Read more</button>
 
