instruction for button use

--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -11,17 +11,13 @@ $white-btn-bgc--active: #ECEBEB;
 
 ////
 
-
-.button{
-    //можна винести в плейсхолдер або селектор тегу button
-    font-family: inherit;
+.red-button{
+  //для плейсхолдера
+font-family: inherit;
     border-radius: 22px;
     padding: 12px 37px 11px 37px;
-    ///////
-}
+    ////
 
-
-.red-button{
     color: $red-btn-txt;
         background-color: $red-btn-bgc;
     
@@ -33,6 +29,12 @@ $white-btn-bgc--active: #ECEBEB;
 
 
 .white-button{
+    //для плейсхолдера
+        font-family: inherit;
+        border-radius: 22px;
+        padding: 12px 37px 11px 37px;
+        ////
+
     color: $white-btn-txt;
     background-color: $white-btn-bgc;
     
