--- a/src/partials/components/button.html
+++ b/src/partials/components/button.html
@@ -5,8 +5,8 @@
         <p>Щоб використати оформлення додайте кнопці клас "red-button" або "white-button"</p>
         
         
-        <button class="red-button button">Read more</button>
-        <button class="white-button button">Read more</button>
+        <button class="red-button">Read more</button>
+        <button class="white-button">Read more</button>
         
         <h3>Кнопки зі стрілками</h3>
         <p>Стандартний відступ іконки - задайте тегу SVG - клас "button__icon"</p>
@@ -15,13 +15,13 @@
         <p>use href="./images/icons.svg#icon-red-button"</p>
         <p>use href="./images/icons.svg#icon-white-button"</p>
         
-        <button class="red-button button">Read more
+        <button class="red-button">Read more
             <svg class="button__icon" width="7px" height="10px">
                 <use href="./images/icons.svg#icon-red-button"></use>
             </svg>
         </button>
         
-        <button class="white-button button">Read more
+        <button class="white-button">Read more
             <svg class="button__icon" width="7px" height="10px">
                 <use href="./images/icons.svg#icon-white-button"></use>
             </svg>
