Добавляє картки з контактами

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,7 +1,94 @@
 <section class="contacts">
-  <p>
-    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur incidunt assumenda
-    exercitationem dicta! Harum incidunt ipsa sequi perspiciatis veniam, aperiam, ratione vel
-    aliquid autem necessitatibus quaerat in qui unde officia.
-  </p>
+  <div class="container">
+    <h2 hidden>Contacts</h2>
+
+    <div class="wrapper">
+      <span class="contacts__accent">CAFE</span>
+      <p class="contacts__uppertext">Chicago</p>
+      <p class="contacts__text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+
+      <ul class="contacts__list">
+        <li class="contacts__item">Monday - Friday</li>
+        <li class="contacts__item">
+          <p class="contacts__time"><time>06:00</time> AM - <time>10:00</time> PM</p>
+        </li>
+        <li class="contacts__item">Saturday - Sunday</li>
+        <li class="contacts__item">
+          <p class="contacts__time"><time>08:00</time> AM - <time>16:00</time> PM</p>
+        </li>
+      </ul>
+
+      <address class="adress">
+        <ul class="adress__list">
+          <li class="adress__item">
+            <a class="adress__link" href="tel:+61(0)383766284 ">+61(0)383766284</a>
+          </li>
+          <li class="adress__item">
+            <a class="adress__link" href="mailto:noreply@envato.com">noreply@envato.com</a>
+          </li>
+        </ul>
+      </address>
+    </div>
+
+    <div class="wrapper">
+      <span class="contacts__accent contacts__accent--another">FOODTRUCK</span>
+      <p class="contacts__uppertext">Los Angeles</p>
+      <p class="contacts__text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+
+      <ul class="contacts__list">
+        <li class="contacts__item">Monday - Friday</li>
+        <li class="contacts__item">
+          <p class="contacts__time"><time>06:00</time> AM - <time>10:00</time> PM</p>
+        </li>
+        <li class="contacts__item">Saturday - Sunday</li>
+        <li class="contacts__item">
+          <p class="contacts__time"><time>08:00</time> AM - <time>16:00</time> PM</p>
+        </li>
+      </ul>
+
+      <address class="adress">
+        <ul class="adress__list">
+          <li class="adress__item">
+            <a class="adress__link" href="tel:+61(0)383766284 ">+61(0)383766284</a>
+          </li>
+          <li class="adress__item">
+            <a class="adress__link" href="mailto:noreply@envato.com">noreply@envato.com</a>
+          </li>
+        </ul>
+      </address>
+    </div>
+
+    <div class="wrapper">
+      <span class="contacts__accent">CAFE</span>
+      <p class="contacts__uppertext">New York</p>
+      <p class="contacts__text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+
+      <ul class="contacts__list">
+        <li class="contacts__item">Monday - Friday</li>
+        <li class="contacts__item">
+          <p class="contacts__time"><time>06:00</time> AM - <time>10:00</time> PM</p>
+        </li>
+        <li class="contacts__item">Saturday - Sunday</li>
+        <li class="contacts__item">
+          <p class="contacts__time"><time>08:00</time> AM - <time>16:00</time> PM</p>
+        </li>
+      </ul>
+
+      <address class="adress">
+        <ul class="adress__list">
+          <li class="adress__item">
+            <a class="adress__link" href="tel:+61(0)383766284 ">+61(0)383766284</a>
+          </li>
+          <li class="adress__item">
+            <a class="adress__link" href="mailto:noreply@envato.com">noreply@envato.com</a>
+          </li>
+        </ul>
+      </address>
+    </div>
+
+    <ul>
+      <li><button type="button">text</button></li>
+      <li><button type="button">text</button></li>
+    </ul>
+  </div>
 </section>
