--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -1,3 +1,105 @@
-p {
-  color: red;
+.wrapper {
+  display: inline-block;
+  padding: 37px 32px 37px 32px;
+  min-width: 280px;
+  min-height: 412px;
+
+  background: $color-font-white;
+  box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
+  border-radius: 24px;
+
+  &:not(:last-child) {
+    margin-bottom: 20px;
+  }
+}
+.contacts__accent {
+  display: inline-block;
+  margin-bottom: 20px;
+
+  min-width: 80px;
+  min-height: 16px;
+
+  font-family: $font-primary;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.83;
+  text-align: center;
+  letter-spacing: 0.04em;
+
+  color: $color-font-white;
+  background: #f0d1a5;
+  border-radius: 4px;
+
+  &--another {
+    min-width: 130px;
+    background: #c2e297;
+  }
+}
+.contacts__uppertext {
+  margin-bottom: 8px;
+
+  font-family: $font-primary;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.83;
+  letter-spacing: 0.04em;
+
+  color: $color-font-main;
+}
+.contacts__text {
+  font-family: $font-primary;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.5;
+
+  color: $color-font-second;
+
+  &::after {
+    display: inline-block;
+    content: '';
+    margin-top: 24px;
+    margin-bottom: 24px;
+    width: 216px;
+    height: 1px;
+    background-color: #e1e1e1;
+  }
+}
+.contacts__list {
+  &::after {
+    display: inline-block;
+    content: '';
+    margin-top: 14px;
+    margin-bottom: 24px;
+    width: 216px;
+    height: 1px;
+    background-color: #e1e1e1;
+  }
+}
+.contacts__item {
+  font-family: $font-primary;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.83;
+
+  color: $color-font-main;
+}
+.contacts__time {
+  margin-bottom: 8px;
+
+  font-family: $font-primary;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.83;
+
+  color: $color-font-span;
+}
+.adress__link {
+  font-family: $font-primary;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.5;
+
+  color: $color-font-second;
 }
