add mix and popap

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -6,9 +6,10 @@
 // Стили для файла с примером HTML-фрагмента
 @import './example';
 @import './basis/var';
+@import './utils/mixin';
+
 @import './basis/default';
 @import './basis/reset';
-@import './utils/mixin';
 
 @import './components/header';
 @import './components/hero';
@@ -24,3 +25,6 @@
 
 // Buttons
 @import './components/buttons';
+@import './components/modal';
+
+
