--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -86,9 +86,23 @@
       </address>
     </div>
 
-    <ul>
-      <li><button type="button">text</button></li>
-      <li><button type="button">text</button></li>
+    <ul class="list">
+      <li class="list__item">
+        <button class="list__btn list__btn--red" type="button">
+          Our Locations
+          <!-- <svg>
+            <use href=""></use>
+          </svg> -->
+        </button>
+      </li>
+      <li class="list__item">
+        <button class="list__btn list__btn--white" type="button">
+          Franchise
+          <!-- <svg>
+            <use href=""></use>
+          </svg> -->
+        </button>
+      </li>
     </ul>
   </div>
 </section>
