--- a/src/sass/basis/_var.scss
+++ b/src/sass/basis/_var.scss
@@ -23,4 +23,10 @@ $color-font-white:  #FFFFFF;
 $color-font-span:  #FFA5BA;
 ;
 
-
+//products-cards-bg
+$card-1-front-bg: #FFB8CA;
+$card-1-back-bg: #ffd2dd;
+$card-2-front-bg: #F0D1A5;
+$card-2-back-bg: #f4dcbb;
+$card-3-front-bg: #C2E297;
+$card-3-back-bg: #cee8ab;
