--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,40 +1,104 @@
-<section class="products">
+<section class="products section">
     <div class="container">
-        <h2 class="products__title">
-            <p class="products__subtitle">100% natural</p>
+        <h2 class="products__title section__title">
+            <span class="products__subtitle section__subtitle">100% natural</span>
             products
         </h2>
         <ul class="products__cards cards">
-            <li class="cards__item">
-                <h3 class="cards__title">ice cream</h3>
-                <p class="cards__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna
-                aliqua facilisis.</p>
-                <button class="cards__btn btn-circle" type="button">
-                    <svg class="btn-circle__icon">
-                        <use href="/images/icons.svg#arrow-right"></use>
-                    </svg>
-                </button>
+            <li class="cards__item" data-card1>
+                <div class="cards__side cards__side--front card-1">
+                    <h3 class="cards__title">ice cream</h3>
+                    <p class="cards__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
+                    <button class="cards__btn btn-circle" type="button" data-card1-btn-right>
+                        <svg class="btn-circle__icon">
+                            <use href="/images/icons.svg#arrow-right"></use>
+                        </svg>
+                    </button>
+                </div>
+                <div class="cards__side cards__side--back card-1">
+                    <h3 class="cards__title">ice cream</h3>
+                    <p class="cards__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
+                    <button class="cards__btn btn-circle" type="button" data-card1-btn-left>
+                        <svg class="btn-circle__icon">
+                            <use href="/images/icons.svg#arrow-left"></use>
+                        </svg>
+                    </button>
+                </div>                
             </li>
-            <li class="cards__item">
-                <h3 class="cards__title">ice coffee</h3>
-                <p class="cards__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna
-                aliqua facilisis.</p>
-                <button class="cards__btn btn-circle" type="button">
-                    <svg class="btn-circle__icon">
-                        <use href="/images/icons.svg#arrow-right"></use>
-                    </svg>
-                </button>
+            <li class="cards__item" data-card2>
+                <div class="cards__side cards__side--front card-2" data-card2-btn-right>
+                    <h3 class="cards__title">ice coffee</h3>
+                    <p class="cards__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
+                    <button class="cards__btn btn-circle" type="button">
+                        <svg class="btn-circle__icon">
+                            <use href="/images/icons.svg#arrow-right"></use>
+                        </svg>
+                    </button>
+                </div>
+                <div class="cards__side cards__side--back card-2">
+                    <h3 class="cards__title">ice coffee</h3>
+                    <p class="cards__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
+                    <button class="cards__btn btn-circle" type="button" data-card2-btn-left>
+                        <svg class="btn-circle__icon">
+                            <use href="/images/icons.svg#arrow-left"></use>
+                        </svg>
+                    </button>
+                </div>
             </li>
-            <li class="cards__item">
-                <h3 class="cards__title">milkshakes</h3>
-                <p class="cards__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna
-                aliqua facilisis.</p>
-                <button class="cards__btn btn-circle" type="button">
-                    <svg class="btn-circle__icon">
-                        <use href="/images/icons.svg#arrow-right"></use>
-                    </svg>
-                </button>
-            </li>
+            <li class="cards__item" data-card3>
+                <div class="cards__side cards__side--front card-3" data-card3-btn-right>
+                    <h3 class="cards__title">milkshakes</h3>
+                    <p class="cards__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                        ut labore et. dolore magna aliqua facilisis.</p>
+                    <button class="cards__btn btn-circle" type="button">
+                        <svg class="btn-circle__icon">
+                            <use href="/images/icons.svg#arrow-right"></use>
+                        </svg>
+                    </button>
+                </div>
+                <div class="cards__side cards__side--back card-3">
+                    <h3 class="cards__title">milkshakes</h3>
+                    <p class="cards__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                        ut labore et. dolore magna aliqua facilisis.</p>
+                    <button class="cards__btn btn-circle" type="button" data-card3-btn-left>
+                        <svg class="btn-circle__icon">
+                            <use href="/images/icons.svg#arrow-left"></use>
+                        </svg>
+                    </button>
+                </div>
+            </li>            
         </ul>
     </div>
 </section>
+<script>
+    (() => {
+            const refs = {
+                card1BtnRight: document.querySelector("[data-card1-btn-right]"),
+                card1BtnLeft: document.querySelector("[data-card1-btn-left]"),                 
+                card1: document.querySelector("[data-card1]"),
+                card2BtnRight: document.querySelector("[data-card2-btn-right]"),
+                card2BtnLeft: document.querySelector("[data-card2-btn-left]"),
+                card2: document.querySelector("[data-card2]"),                
+                card3BtnRight: document.querySelector("[data-card3-btn-right]"),
+                card3BtnLeft: document.querySelector("[data-card3-btn-left]"),
+                card3: document.querySelector("[data-card3]"),                
+            };
+
+            refs.card1BtnRight.addEventListener("click", toggleCard1);
+            refs.card1BtnLeft.addEventListener("click", toggleCard1);              
+            refs.card2BtnRight.addEventListener("click", toggleCard2);
+            refs.card2BtnLeft.addEventListener("click", toggleCard2);
+            refs.card3BtnRight.addEventListener("click", toggleCard3);
+            refs.card3BtnLeft.addEventListener("click", toggleCard3);
+
+            function toggleCard1() {
+                refs.card1.classList.toggle("cards__item--rotated");                                               
+            }
+            function toggleCard2() {
+                refs.card2.classList.toggle("cards__item--rotated");
+            }   
+            function toggleCard3() {
+                refs.card3.classList.toggle("cards__item--rotated");
+            }                       
+        })();   
+</script>
