--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -1,4 +1,26 @@
-.products__title {
+.section { //буде загальний клас
+    padding-top: 80px;
+    padding-bottom: 40px;
+
+    @media screen and (min-width: 768px) {
+        padding-top: 40px;
+        padding-bottom: 60px;
+    }
+
+    @media screen and (min-width: 1280px) {
+        padding-top: 60px;        
+    }
+}
+
+.products { //тимчасове рішення, вирішити що з контейнером
+    & .container {
+        @media screen and (min-width: 1280px) {
+            width: 1280px;
+        }        
+    }
+}
+
+.products__title { //буде загальний клас, але нижні відступи треба
     margin-bottom: 148px;
     font-family: $font-titel;
     font-weight: 400;
@@ -8,42 +30,208 @@
     letter-spacing: 0.04em;
     text-transform: uppercase;    
     color: $color-font-red;
+
+    @media screen and (min-width: 768px) {
+        margin-bottom: 154px;
+        font-size: 48px;               
+    }
+
+    @media screen and (min-width: 1280px) {
+        margin-bottom: 261px;
+        font-size: 58px;
+        line-height: 1.14;
+        letter-spacing: 0.06em;
+    }
 }
 
-.products__subtitle {
-    margin-bottom: 15px;    
+.products__subtitle { //буде загальний клас
+    display: block;
+    margin-bottom: 15px;   
+    font-family: $font-titel;
+    font-weight: 400;
     font-size: 18px;
     line-height: 1.17;
     text-align: center;
     text-transform: uppercase;
     color: $color-font-span;
+
+    @media screen and (min-width: 768px) {
+        margin-bottom: 18px;
+        font-size: 26px;
+        line-height: 1.15;
+    }
+
+    @media screen and (min-width: 1280px) {
+        margin-bottom: 16px;
+        font-size: 30px;
+        line-height: 1.13;
+    }
 }
 
-.cards__item {    
-    padding: 160px 39px 40px 41px;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 280px;
-    border-radius: 24px;
+.cards {        
+    width: 100%;
+    height: 100%;    
+
+    @media screen and (min-width: 768px) {
+        display: flex;            
+        gap: 16px;
+        justify-content: center;
+    }
+
+    @media screen and (min-width: 1280px) {
+        gap: 32px;
+    }
+}
+
+.cards__item {
+    position: relative;     
+    transform-style: preserve-3d;  
+    // transform-origin: center right;
+    transition: transform 1s cubic-bezier(0.4, 0, 0.2, 1); 
     
     &:not(:last-child) {
-        margin-bottom: 140px;
+        @media screen and (max-width: 767.9px) {
+            margin-bottom: 140px;
+        }        
     }
 
-    // @media screen and (min-width: 480px) {
-    //     width: 280px;
-    // }
+    @media screen and (max-width: 767.9px) {
+        max-width: 450px;
+        min-height: 493px;
+    }
     
-    &:nth-child(1) {
-        background-color: #FFB8CA;
+    @media screen and (min-width: 768px) and (max-width: 1279.9px) {
+        width: 224px;
+        min-height: 472px;
     }
 
-    &:nth-child(2) {
-        background-color: #F0D1A5;
+    @media screen and (min-width: 1280px) {
+        width: 394px;
+        min-height: 587px;
     }
 
-    &:nth-child(3) {
-        background-color: #C2E297;
+    &.cards__item--rotated {        
+        transform: rotateY(180deg);
+        // transform: translateX(-100%) rotateY(-180deg);
+    }             
+}
+
+.cards__side {  
+    position: absolute;        
+    width: 100%;
+    padding-top: 160px;
+    padding-bottom: 40px;    
+    border-radius: 24px;    
+    backface-visibility: hidden;     
+    
+    @media screen and (min-width: 768px) {
+        padding-top: 118px;              
+    }
+
+    @media screen and (min-width: 1280px) {
+        padding-top: 165px;
+        padding-bottom: 60px;               
+    }
+
+    &--back {
+        transform: rotateY(180deg);
+    }
+    
+    &::after {
+        content: '';
+        position: absolute;
+        top: -140px;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 280px;
+        height: 280px;
+
+        @media screen and (min-width: 768px) and (max-width: 1279.9px) {
+            top: -138px;
+            width: 224px;
+            height: 224px;
+        }
+
+        @media screen and (min-width: 1280px) {
+            top: -261px;
+            width: 394px;
+            height: 394px;
+        }
+    }        
+}
+
+.card-1 {
+    &.cards__side::after {
+        background-image: image-set(url("../images/products/320-card-1.png") 1x, url("../images/products/320-card-1@2x.png") 2x);
+        background-image: -webkit-image-set(url("../images/products/320-card-1.png") 1x, url("../images/products/320-card-1@2x.png") 2x);
+
+        @media screen and (min-width: 768px) and (max-width: 1279.9px) {
+            background-image: image-set(url("../images/products/768-card-1.png") 1x, url("../images/products/768-card-1@2x.png") 2x);
+            background-image: -webkit-image-set(url("../images/products/768-card-1.png") 1x, url("../images/products/768-card-1@2x.png") 2x);
+        }
+
+        @media screen and (min-width: 1280px) {
+            background-image: image-set(url("../images/products/1280-card-1.png") 1x, url("../images/products/1280-card-1@2x.png") 2x);
+            background-image: -webkit-image-set(url("../images/products/1280-card-1.png") 1x, url("../images/products/1280-card-1@2x.png") 2x);
+        }
+    }
+
+    &.cards__side--front {
+        background-color: $card-1-front-bg;
+    }
+
+    &.cards__side--back {
+        background-color: $card-1-back-bg;
+    }
+}
+
+.card-2 {
+    &.cards__side::after {
+        background-image: image-set(url("../images/products/320-card-2.png") 1x, url("../images/products/320-card-2@2x.png") 2x);
+        background-image: -webkit-image-set(url("../images/products/320-card-2.png") 1x, url("../images/products/320-card-2@2x.png") 2x);
+
+        @media screen and (min-width: 768px) and (max-width: 1279.9px) {
+            background-image: image-set(url("../images/products/768-card-2.png") 1x, url("../images/products/768-card-2@2x.png") 2x);
+            background-image: -webkit-image-set(url("../images/products/768-card-2.png") 1x, url("../images/products/768-card-2@2x.png") 2x);
+        }
+
+        @media screen and (min-width: 1280px) {
+            background-image: image-set(url("../images/products/1280-card-2.png") 1x, url("../images/products/1280-card-2@2x.png") 2x);
+            background-image: -webkit-image-set(url("../images/products/1280-card-2.png") 1x, url("../images/products/1280-card-2@2x.png") 2x);
+        }
+    }
+
+    &.cards__side--front {
+        background-color: $card-2-front-bg;
+    }
+    
+    &.cards__side--back {
+        background-color: $card-2-back-bg;
+    }
+}
+
+.card-3 {
+    &.cards__side::after {
+        background-image: image-set(url("../images/products/320-card-3.png") 1x, url("../images/products/320-card-3@2x.png") 2x);
+        background-image: -webkit-image-set(url("../images/products/320-card-3.png") 1x, url("../images/products/320-card-3@2x.png") 2x);
+
+        @media screen and (min-width: 768px) and (max-width: 1279.9px) {
+            background-image: image-set(url("../images/products/768-card-3.png") 1x, url("../images/products/768-card-3@2x.png") 2x);
+            background-image: -webkit-image-set(url("../images/products/768-card-3.png") 1x, url("../images/products/768-card-3@2x.png") 2x);
+        }
+
+        @media screen and (min-width: 1280px) {
+            background-image: image-set(url("../images/products/1280-card-3.png") 1x, url("../images/products/1280-card-3@2x.png") 2x);
+            background-image: -webkit-image-set(url("../images/products/1280-card-3.png") 1x, url("../images/products/1280-card-3@2x.png") 2x);
+        }
+    }
+
+    &.cards__side--front {
+        background-color: $card-3-front-bg;
+    }
+    
+    &.cards__side--back {
+        background-color: $card-3-back-bg;
     }
 }
 
@@ -74,6 +262,9 @@
 
 .cards__desc {
     margin-bottom: 32px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 200px;
     font-family: $font-primary;
     font-weight: 700;
     font-size: 14px;
@@ -81,6 +272,17 @@
     text-align: center;
     letter-spacing: 0.04em;
     color: $color-font-white;
+
+    @media screen and (min-width: 768px) and (max-width: 1279.9px) {
+        max-width: 160px;
+    }
+
+    @media screen and (min-width: 1280px) {
+        max-width: 241px;
+        margin-bottom: 60px;
+        font-size: 16px;
+        line-height: 1.76;
+    }
 }
 
 .btn-circle {
@@ -92,7 +294,7 @@
     margin-left: auto;
     margin-right: auto;
     border-radius: 50%;
-    background-color: $color-font-white;
+    background-color: $color-font-white;    
     transition: background-color .3s cubic-bezier(0.4, 0, 0.2, 1), 
     fill .3s cubic-bezier(0.4, 0, 0.2, 1);
 
@@ -111,4 +313,9 @@
     height: 16px;
     fill: $color-font-red;
     transition: fill .3s cubic-bezier(0.4, 0, 0.2, 1);    
+
+    .btn-circle:hover &,
+    .btn-circle:focus & {
+        fill: $color-font-white;
+    }
 }
