add section Hero

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -73,66 +73,67 @@
         type="image/jpeg"
       />
 
-      <img class="hero__icecream" src="images/hero/s/ice-creame.png" alt="ICEREAME" />
+      <img class="hero__icecream backInUp" src="images/hero/s/ice-creame.png" alt="ICEREAME" />
     </picture>
+
     <div class="hero__circle"></div>
 
     <picture>
       <source
         srcset="images/hero/l/milk.webp 1x, images/hero/l/milk@2x.webp 2x"
-        alt="ICEREAME"
+        alt="Milk"
         media="(min-width: 1280px)"
         type="image/webp"
       />
       <source
         srcset="images/hero/l/milk.png 1x, images/hero/l/milk@2x.png 2x"
-        alt="ICEREAME"
+        alt="Milk"
         media="(min-width: 1280px)"
         type="image/jpeg"
       />
       <source
         srcset="images/hero/m/milk.webp 1x, images/hero/m/milk@2x.webp 2x"
-        alt="ICEREAME"
+        alt="Milk"
         media="(min-width: 768px)"
         type="image/webp"
       />
       <source
         srcset="images/hero/m/milk.png 1x, images/hero/m/milk@2x.png 2x"
-        alt="ICEREAME"
+        alt="Milk"
         media="(min-width: 768px)"
         type="image/jpeg"
       />
 
-      <img class="hero__milk" src="images/hero/m/milk.png" alt="Milk" />
+      <img class="hero__milk backInLeft" src="images/hero/m/milk.png" alt="Milk" />
     </picture>
 
     <picture>
       <source
         srcset="images/hero/l/girl.webp 1x, images/hero/l/girl@2x.webp 2x"
-        alt="ICEREAME"
+        alt="girl"
         media="(min-width: 1280px)"
         type="image/webp"
       />
       <source
         srcset="images/hero/l/girl.png 1x, images/hero/l/girl@2x.png 2x"
-        alt="ICEREAME"
+        alt="girl"
         media="(min-width: 1280px)"
         type="image/jpeg"
       />
       <source
         srcset="images/hero/m/girl.webp 1x, images/hero/m/girl@2x.webp 2x"
-        alt="ICEREAME"
+        alt="girl"
         media="(min-width: 768px)"
         type="image/webp"
       />
       <source
         srcset="images/hero/m/girl.png 1x, images/hero/m/girl@2x.png 2x"
-        alt="ICEREAME"
+        alt="girl"
         media="(min-width: 768px)"
         type="image/jpeg"
       />
 
-      <img class="hero__girl" src="images/hero/m/girl.png" alt="girl" />
+      <img class="hero__girl backInRight" src="images/hero/m/girl.png" alt="girl" />
     </picture>
   </div>
 </section>
