--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -10,17 +10,15 @@
     margin: 0 auto;
     overflow: hidden;
 
-    @media screen and (min-width: 480px) {
+    @include mq(mobile) {
       width: 480px;
     }
-
-    @media screen and (min-width: 768px) {
+    @include mq(tablet) {
       width: 768px;
       padding-top: 102px;
       padding-bottom: 190px;
     }
-
-    @media screen and (min-width: 1280px) {
+    @include mq(desktop) {
       width: 1280px;
       padding-top: 147px;
       padding-bottom: 316px;
@@ -32,11 +30,11 @@
     width: 218px;
     z-index: 9;
 
-    @media screen and (min-width: 768px) {
+    @include mq(tablet) {
       width: 162px;
     }
 
-    @media screen and (min-width: 1280px) {
+    @include mq(desktop) {
       width: 277px;
     }
   }
@@ -52,12 +50,12 @@
     color: #ffffff;
     margin-bottom: 20px;
 
-    @media screen and (min-width: 768px) {
+    @include mq(tablet) {
       font-size: 22px;
       line-height: 1.1363;
     }
 
-    @media screen and (min-width: 1280px) {
+    @include mq(desktop) {
       font-size: 38px;
       line-height: 1.145;
     }
@@ -66,10 +64,10 @@
       color: #d41443;
       font-size: 48px;
 
-      @media screen and (min-width: 768px) {
+      @include mq(tablet) {
         font-size: 34px;
       }
-      @media screen and (min-width: 1280px) {
+      @include mq(desktop) {
         font-size: 58px;
       }
     }
@@ -81,10 +79,10 @@
     bottom: 0;
     z-index: 5;
 
-    @media screen and (min-width: 768px) {
+    @include mq(tablet) {
       left: 322px;
     }
-    @media screen and (min-width: 1280px) {
+    @include mq(desktop) {
       left: 636px;
     }
   }
@@ -97,11 +95,12 @@
     background: #ffa5ba;
     border-radius: 50%;
     z-index: 4;
-    @media screen and (min-width: 768px) {
+
+    @include mq(tablet) {
       top: 43px;
       left: 248px;
     }
-    @media screen and (min-width: 1280px) {
+    @include mq(desktop) {
       top: 54px;
       left: 517px;
       width: 534px;
@@ -111,7 +110,7 @@
   &__milk {
     display: none;
 
-    @media screen and (min-width: 768px) {
+    @include mq(tablet) {
       display: block;
       position: absolute;
       left: 15px;
@@ -121,7 +120,7 @@
   &__girl {
     display: none;
 
-    @media screen and (min-width: 768px) {
+    @include mq(tablet) {
       display: block;
       position: absolute;
       right: 15px;
@@ -134,7 +133,7 @@
 .promo {
   display: none;
 
-  @media screen and (min-width: 768px) {
+  @include mq(tablet) {
     display: block;
     position: absolute;
     left: 167px;
@@ -142,7 +141,7 @@
     width: 114px;
   }
 
-  @media screen and (min-width: 1280px) {
+  @include mq(desktop) {
     left: 228px;
     bottom: 84px;
     width: 200px;
@@ -157,7 +156,7 @@
     line-height: 1.5;
     color: #ffffff;
 
-    @media screen and (min-width: 1280px) {
+    @include mq(desktop) {
       font-size: 14px;
       line-height: 1.4;
     }
@@ -175,12 +174,12 @@
       background-color: #ecebeb;
     }
 
-    @media screen and (min-width: 768px) {
+    @include mq(tablet) {
       width: 18px;
       height: 18px;
     }
 
-    @media screen and (min-width: 1280px) {
+    @include mq(desktop) {
       width: 26px;
       height: 26px;
     }
@@ -190,7 +189,7 @@
     height: 5px;
     fill: #d41443;
 
-    @media screen and (min-width: 1280px) {
+    @include mq(desktop) {
       width: 8px;
       height: 8px;
     }
@@ -200,13 +199,13 @@
 .counters {
   display: none;
 
-  @media screen and (min-width: 768px) {
+  @include mq(tablet) {
     display: block;
     position: absolute;
     top: 94px;
     right: 23px;
   }
-  @media screen and (min-width: 1280px) {
+  @include mq(desktop) {
     top: 157px;
     right: 33px;
   }
@@ -232,7 +231,7 @@
     color: #d41443;
     z-index: 2;
 
-    @media screen and (min-width: 1280px) {
+    @include mq(desktop) {
       font-size: 46px;
       line-height: 1.15;
     }
@@ -248,7 +247,7 @@
       background-color: #fff;
       z-index: -1;
 
-      @media screen and (min-width: 1280px) {
+      @include mq(desktop) {
         top: -4px;
         right: -18px;
         width: 30px;
@@ -265,7 +264,7 @@
     text-align: right;
     color: #ffffff;
 
-    @media screen and (min-width: 1280px) {
+    @include mq(desktop) {
       font-size: 14px;
       line-height: 1.29;
     }
@@ -292,7 +291,7 @@
 
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    @media screen and (min-width: 1280px) {
+    @include mq(desktop) {
       font-size: 14px;
       line-height: 1.29;
     }
@@ -316,4 +315,127 @@
       }
     }
   }
+}
+
+@-webkit-keyframes backInRight {
+  0% {
+    transform: translateX(2000px) scale(0.7);
+    opacity: 0.7;
+  }
+
+  80% {
+    transform: translateX(0px) scale(0.7);
+    opacity: 0.7;
+  }
+
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+@keyframes backInRight {
+  0% {
+    transform: translateX(2000px) scale(0.7);
+    opacity: 0.7;
+  }
+
+  80% {
+    transform: translateX(0px) scale(0.7);
+    opacity: 0.7;
+  }
+
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+.backInRight {
+  -webkit-animation: backInRight 1.5s;
+  animation: backInRight 1.5s;
+  -webkit-animation-timing-function: ease-out;
+  animation-timing-function: ease-out;
+}
+
+@-webkit-keyframes backInLeft {
+  0% {
+    transform: translateX(-2000px) scale(0.7);
+    opacity: 0.7;
+  }
+
+  80% {
+    transform: translateX(0px) scale(0.7);
+    opacity: 0.7;
+  }
+
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+@keyframes backInLeft {
+  0% {
+    transform: translateX(-2000px) scale(0.7);
+    opacity: 0.7;
+  }
+
+  80% {
+    transform: translateX(0px) scale(0.7);
+    opacity: 0.7;
+  }
+
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+.backInLeft {
+  -webkit-animation: backInLeft 1.5s;
+  animation: backInLeft 1.5s;
+  -webkit-animation-timing-function: ease-out;
+  animation-timing-function: ease-out;
+}
+
+@-webkit-keyframes backInUp {
+  0% {
+    transform: translateY(800px) scale(0.7);
+    opacity: 0.7;
+  }
+
+  80% {
+    transform: translateY(0px) scale(0.7);
+    opacity: 0.7;
+  }
+
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+@keyframes backInUp {
+  0% {
+    transform: translateY(800px) scale(0.7);
+    opacity: 0.7;
+  }
+
+  80% {
+    transform: translateY(0px) scale(0.7);
+    opacity: 0.7;
+  }
+
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+.backInUp {
+  -webkit-animation: backInUp 1.5s;
+  animation: backInUp 1.5s;
+  -webkit-animation-timing-function: ease-out;
+  animation-timing-function: ease-out;
 }
