--- a/src/sass/basis/_var.scss
+++ b/src/sass/basis/_var.scss
@@ -2,6 +2,8 @@ $start-width: 320px;
 $mobile: 480px;
 $tablet: 768px;
 $desktop: 1280px;
+$time: 250ms;
+$functional-cubic: cubic-bezier(0.4, 0, 0.2, 1);
 
 $main-color: #ffb8ca;
 
