Добавляє tablet версію

--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -1,6 +1,11 @@
 .contacts {
   background-image: linear-gradient(to bottom, rgba(255, 255, 255, 1), rgba(255, 245, 246, 1));
 }
+.upperwrapper {
+  @media screen and (min-width: 768px) {
+    display: flex;
+  }
+}
 .wrapper {
   display: inline-block;
   padding: 37px 32px 37px 32px;
@@ -13,6 +18,15 @@
 
   &:not(:last-child) {
     margin-bottom: 20px;
+  }
+  @media screen and (min-width: 768px) {
+    min-width: 224px;
+    min-height: 528px;
+    padding: 40px 32px 40px 32px;
+
+    &:not(:last-child) {
+      margin-bottom: 0;
+    }
   }
 }
 .contacts__accent {
@@ -37,6 +51,19 @@
     min-width: 130px;
     background: #c2e297;
   }
+
+  @media screen and (min-width: 768px) {
+    margin-bottom: 32px;
+    font-size: 16px;
+    min-width: 73px;
+    min-height: 28px;
+    border-radius: 6px;
+
+    &--another {
+      min-width: 138px;
+      background: #c2e297;
+    }
+  }
 }
 .contacts__uppertext {
   margin-bottom: 8px;
@@ -48,6 +75,10 @@
   letter-spacing: 0.04em;
 
   color: $color-font-main;
+
+  @media screen and (min-width: 768px) {
+    font-size: 14px;
+  }
 }
 .contacts__text {
   font-family: $font-primary;
@@ -66,6 +97,17 @@
     height: 1px;
     background-color: #e1e1e1;
   }
+
+  @media screen and (min-width: 768px) {
+    font-size: 14px;
+    line-height: 1.6;
+
+    &::after {
+      min-width: 160px;
+      margin-top: 32px;
+      margin-bottom: 32px;
+    }
+  }
 }
 .contacts__list {
   &::after {
@@ -77,6 +119,14 @@
     height: 1px;
     background-color: #e1e1e1;
   }
+
+  @media screen and (min-width: 768px) {
+    &::after {
+      min-width: 160px;
+      margin-top: 24px;
+      margin-bottom: 32px;
+    }
+  }
 }
 .contacts__item {
   font-family: $font-primary;
@@ -86,6 +136,10 @@
   line-height: 1.83;
 
   color: $color-font-main;
+
+  @media screen and (min-width: 768px) {
+    font-size: 14px;
+  }
 }
 .contacts__time {
   margin-bottom: 8px;
@@ -96,6 +150,10 @@
   line-height: 1.83;
 
   color: $color-font-span;
+
+  @media screen and (min-width: 768px) {
+    font-size: 14px;
+  }
 }
 .adress__link {
   font-family: $font-primary;
@@ -105,6 +163,19 @@
   line-height: 1.5;
 
   color: $color-font-second;
+
+  @media screen and (min-width: 768px) {
+    font-size: 14px;
+    line-height: 1.8;
+  }
+}
+.list {
+  @media screen and (min-width: 768px) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 40px;
+  }
 }
 .list__item {
   max-width: 161px;
@@ -113,6 +184,19 @@
 
   &:not(:last-child) {
     margin-bottom: 10px;
+  }
+
+  @media screen and (min-width: 768px) {
+    margin: 0;
+    max-width: 191px;
+
+    &:not(:last-child) {
+      margin-bottom: 0;
+    }
+
+    &:not(:last-child) {
+      margin-right: 14px;
+    }
   }
 }
 .list__btn {
@@ -128,11 +212,12 @@
   border-radius: 22px;
 
   &--red {
-    margin-top: 12px;
+    margin-top: 32px;
 
     color: $color-font-white;
     background-color: $color-font-red;
   }
+
   &--red:hover,
   &--red:focus {
     background-color: #c7133e;
@@ -142,8 +227,15 @@
     color: $color-font-red;
     background-color: $color-font-white;
   }
+
   &--white:hover,
   &--white:focus {
     background-color: #ecebeb;
+  }
+
+  @media screen and (min-width: 768px) {
+    margin: 0;
+    min-width: 191px;
+    min-height: 44px;
   }
 }
