--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -2,88 +2,90 @@
   <div class="container">
     <h2 hidden>Contacts</h2>
 
-    <div class="wrapper">
-      <span class="contacts__accent">CAFE</span>
-      <p class="contacts__uppertext">Chicago</p>
-      <p class="contacts__text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+    <div class="upperwrapper">
+      <div class="wrapper">
+        <span class="contacts__accent">CAFE</span>
+        <p class="contacts__uppertext">Chicago</p>
+        <p class="contacts__text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
 
-      <ul class="contacts__list">
-        <li class="contacts__item">Monday - Friday</li>
-        <li class="contacts__item">
-          <p class="contacts__time"><time>06:00</time> AM - <time>10:00</time> PM</p>
-        </li>
-        <li class="contacts__item">Saturday - Sunday</li>
-        <li class="contacts__item">
-          <p class="contacts__time"><time>08:00</time> AM - <time>16:00</time> PM</p>
-        </li>
-      </ul>
-
-      <address class="adress">
-        <ul class="adress__list">
-          <li class="adress__item">
-            <a class="adress__link" href="tel:+61(0)383766284 ">+61(0)383766284</a>
+        <ul class="contacts__list">
+          <li class="contacts__item">Monday - Friday</li>
+          <li class="contacts__item">
+            <p class="contacts__time"><time>06:00</time> AM - <time>10:00</time> PM</p>
           </li>
-          <li class="adress__item">
-            <a class="adress__link" href="mailto:noreply@envato.com">noreply@envato.com</a>
+          <li class="contacts__item">Saturday - Sunday</li>
+          <li class="contacts__item">
+            <p class="contacts__time"><time>08:00</time> AM - <time>16:00</time> PM</p>
           </li>
         </ul>
-      </address>
-    </div>
 
-    <div class="wrapper">
-      <span class="contacts__accent contacts__accent--another">FOODTRUCK</span>
-      <p class="contacts__uppertext">Los Angeles</p>
-      <p class="contacts__text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+        <address class="adress">
+          <ul class="adress__list">
+            <li class="adress__item">
+              <a class="adress__link" href="tel:+61(0)383766284 ">+61(0)383766284</a>
+            </li>
+            <li class="adress__item">
+              <a class="adress__link" href="mailto:noreply@envato.com">noreply@envato.com</a>
+            </li>
+          </ul>
+        </address>
+      </div>
 
-      <ul class="contacts__list">
-        <li class="contacts__item">Monday - Friday</li>
-        <li class="contacts__item">
-          <p class="contacts__time"><time>06:00</time> AM - <time>10:00</time> PM</p>
-        </li>
-        <li class="contacts__item">Saturday - Sunday</li>
-        <li class="contacts__item">
-          <p class="contacts__time"><time>08:00</time> AM - <time>16:00</time> PM</p>
-        </li>
-      </ul>
+      <div class="wrapper">
+        <span class="contacts__accent contacts__accent--another">FOODTRUCK</span>
+        <p class="contacts__uppertext">Los Angeles</p>
+        <p class="contacts__text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
 
-      <address class="adress">
-        <ul class="adress__list">
-          <li class="adress__item">
-            <a class="adress__link" href="tel:+61(0)383766284 ">+61(0)383766284</a>
+        <ul class="contacts__list">
+          <li class="contacts__item">Monday - Friday</li>
+          <li class="contacts__item">
+            <p class="contacts__time"><time>06:00</time> AM - <time>10:00</time> PM</p>
           </li>
-          <li class="adress__item">
-            <a class="adress__link" href="mailto:noreply@envato.com">noreply@envato.com</a>
-          </li>
-        </ul>
-      </address>
-    </div>
-
-    <div class="wrapper">
-      <span class="contacts__accent">CAFE</span>
-      <p class="contacts__uppertext">New York</p>
-      <p class="contacts__text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
-
-      <ul class="contacts__list">
-        <li class="contacts__item">Monday - Friday</li>
-        <li class="contacts__item">
-          <p class="contacts__time"><time>06:00</time> AM - <time>10:00</time> PM</p>
-        </li>
-        <li class="contacts__item">Saturday - Sunday</li>
-        <li class="contacts__item">
-          <p class="contacts__time"><time>08:00</time> AM - <time>16:00</time> PM</p>
-        </li>
-      </ul>
-
-      <address class="adress">
-        <ul class="adress__list">
-          <li class="adress__item">
-            <a class="adress__link" href="tel:+61(0)383766284 ">+61(0)383766284</a>
-          </li>
-          <li class="adress__item">
-            <a class="adress__link" href="mailto:noreply@envato.com">noreply@envato.com</a>
+          <li class="contacts__item">Saturday - Sunday</li>
+          <li class="contacts__item">
+            <p class="contacts__time"><time>08:00</time> AM - <time>16:00</time> PM</p>
           </li>
         </ul>
-      </address>
+
+        <address class="adress">
+          <ul class="adress__list">
+            <li class="adress__item">
+              <a class="adress__link" href="tel:+61(0)383766284 ">+61(0)383766284</a>
+            </li>
+            <li class="adress__item">
+              <a class="adress__link" href="mailto:noreply@envato.com">noreply@envato.com</a>
+            </li>
+          </ul>
+        </address>
+      </div>
+
+      <div class="wrapper">
+        <span class="contacts__accent">CAFE</span>
+        <p class="contacts__uppertext">New York</p>
+        <p class="contacts__text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+
+        <ul class="contacts__list">
+          <li class="contacts__item">Monday - Friday</li>
+          <li class="contacts__item">
+            <p class="contacts__time"><time>06:00</time> AM - <time>10:00</time> PM</p>
+          </li>
+          <li class="contacts__item">Saturday - Sunday</li>
+          <li class="contacts__item">
+            <p class="contacts__time"><time>08:00</time> AM - <time>16:00</time> PM</p>
+          </li>
+        </ul>
+
+        <address class="adress">
+          <ul class="adress__list">
+            <li class="adress__item">
+              <a class="adress__link" href="tel:+61(0)383766284 ">+61(0)383766284</a>
+            </li>
+            <li class="adress__item">
+              <a class="adress__link" href="mailto:noreply@envato.com">noreply@envato.com</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </div>
 
     <ul class="list">
