--- a/src/partials/picture/bolvanka.html
+++ b/src/partials/picture/bolvanka.html
@@ -1,40 +1,33 @@
- <picture>
-          <source
-            srcset="images/hero/l/girl.webp 1x, images/hero/l/girl@2x.webp 2x"
-            alt="picture about milk"
-            media="(min-width: 1200px)"
-            type="image/webp"
-          />
-          <source
-            srcset="images/hero/l/girl.jpg 1x, images/hero/l/girl@2x.jpg 2x"
-            alt="picture about milk"
-            media="(min-width: 1200px)"
-            type="image/jpg"
-          />
-          <source
-            srcset="images/hero/m/girl.webp 1x, images/hero/m/girl@2x.webp 2x"
-            alt="picture about milk"
-            media="(min-width: 768px)"
-            type="image/webp"
-          />
-          <source
-            srcset="images/hero/m/girl.jpg 1x, images/hero/m/girl@2x.jpg 2x"
-            alt="picture about milk"
-            media="(min-width: 768px)"
-            type="image/jpg"
-          />
-          <source
-            srcset="images/hero/s/girl.webp 1x, images/hero/s/girl@2x.webp 2x"
-            alt="picture about milk"
-            media="(max-width: 767px)"
-            type="image/webp"
-          />
-          <source
-            srcset="images/hero/s/girl.jpg 1x, images/hero/s/girl@2x.jpg 2x"
-            alt="picture about milk"
-            media="(max-width: 767px)"
-            type="image/jpg"
-          />
-
-          <img src="images/hero/s/girl.jpg" alt="picture about milk" />
-        </picture>
+<picture>
+  <source
+    srcset="images/advantages/l/icon_3.webp 1x, images/advantages/l/icon_3@2x.webp 2x"
+    media="(min-width: 1280px)"
+    type="image/webp"
+  />
+  <source
+    srcset="images/advantages/l/icon_3.jpg 1x, images/advantages/l/icon_3@2x.jpg 2x"
+    media="(min-width: 1280px)"
+    type="image/jpg"
+  />
+  <source
+    srcset="images/advantages/m/icon_3.webp 1x, images/advantages/m/icon_3@2x.webp 2x"
+    media="(min-width: 768px)"
+    type="image/webp"
+  />
+  <source
+    srcset="images/advantages/m/icon_3.jpg 1x, images/advantages/m/icon_3@2x.jpg 2x"
+    media="(min-width: 768px)"
+    type="image/jpg"
+  />
+  <source
+    srcset="images/advantages/s/icon_3.webp 1x, images/advantages/s/icon_3@2x.webp 2x"
+    media="(max-width: 767px)"
+    type="image/webp"
+  />
+  <source
+    srcset="images/advantages/s/icon_3.jpg 1x, images/advantages/s/icon_3@2x.jpg 2x"
+    media="(max-width: 767px)"
+    type="image/jpg"
+  />
+  <img src="images/advantages/s/icon_3.jpg" alt="picture" />
+</picture>
