--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -14,7 +14,7 @@
 
     <ul class="counters">
       <li class="counters__item">
-        <p class="counters__count">16</p>
+        <p class="counters__count"><span class="calc-num">16</span></p>
         <p class="counters__name">cafes</p>
       </li>
       <li class="counters__item">
