додає div-container та фіксить анімацію

--- a/src/sass/components/_gallery.scss
+++ b/src/sass/components/_gallery.scss
@@ -1,14 +1,14 @@
 .gallery {
+    display: flex;
     margin-left: auto;
     margin-right: auto;
-
-    display: flex;
-    
+    justify-content: center;
+    align-items: center;
     max-height: 430px;
 
     @media screen and (max-width: 767px) {
         gap: 2px;
-        padding: 0 15px;
+        // padding: 0 15px;
     }
 
     @media screen and (min-width: 768px) {
@@ -19,15 +19,12 @@
         gap: 6px;
     }
 
-    
-
-    background-image: linear-gradient(to bottom,
+    &__section {
+        background-image: linear-gradient(to bottom,
         #FFF5F6 40%,
         #fff 40%,
         #fff 65%);
-
-    justify-content: center;
-    align-items: center;
+    }
 
     &__column {
 
@@ -77,11 +74,31 @@
     &__item {
         display: block;
     }
-
+    
     &__thumb {
+        position: relative;
+        
         // border: 1px solid teal;
         border-radius: 15%;
         overflow: hidden;
+        z-index: 10;
+
+        &::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            height: 100%;
+            width: 50px;
+            z-index: 100;
+            background-color: rgba($color: #ffffff, $alpha: 0.5);
+            transform: skewX(45deg) translateX(450px);
+            transition: 0.5s;
+            }
+        
+        &:hover::before {
+            transform: skewX(45deg) translateX(-150px);
+        }
 
         &--changed {
             @media screen and (max-width: 767px) {
@@ -110,26 +127,20 @@
                 margin-bottom: 6px;
             }
         }
-
+        
         &:hover,
         &:focus {
-            animation: addGalleryAnime 1550ms infinite 100ms;
+            animation: addGalleryAnime 1100ms infinite 100ms;
 
             @keyframes addGalleryAnime {
                 0% {
                     transform: scale(1);
                 }
-                // 25% {
-                //     transform: scale(1.12);
-                // }
-
+                
                 50% {
                     transform: scale(1.25);
                 }
-                // 75% {
-                //     transform: scale(1.12);
-                // }
-
+                
                 100% {
                     transform: scale(1);
                 }
@@ -137,3 +148,5 @@
         }
     }
 }
+
+
