--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,4 +1,4 @@
-<section class="about-section">
+<section class="about-section" id="about">
     <div class="container about-overlay">
         <h2 class="section__title">
             <span class="section__subtitle">tradition and love</span>
