--- a/src/sass/basis/_var.scss
+++ b/src/sass/basis/_var.scss
@@ -15,7 +15,7 @@ $second-color: #ffa5ba;
 
 $font-primary: 'DM Sans';
 $font-primary-rezerv: 'sans-serif';
-$font-titel: 'Titan One';
+$font-title: 'Titan One';
 
 $color-font-main: #000000;
 $color-font-second: #907e82;
