--- a/src/sass/components/_title.scss
+++ b/src/sass/components/_title.scss
@@ -1,5 +1,5 @@
 .section__title{
-    font-family: $font-title;
+    font-family: $font-titel;
     font-weight: 400;
     font-size: 34px;
     line-height: 1.15;
@@ -24,7 +24,7 @@
 .section__subtitle{
     display: block;
     margin-bottom: 15px;
-    
+
     font-size: 18px;
     line-height: 1.17;
     color: $color-font-span;
