--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,5 +1,5 @@
-<section class="about-section" id="about">
-    <div class="container about-overlay">
+<section class="about__section" id="about">
+    <div class="container about__overlay">
         <h2 class="section__title">
             <span class="section__subtitle">tradition and love</span>
             how it’s made?
@@ -31,12 +31,12 @@
                         <img src="images/about/s/milk.png" alt="Cow and bottle of milk" width="418" height="360" />
                     </picture>
                     
-                    <div class="about__text">
-                        <p class="about__text-first">Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus
+                    <div class="about__textContent">
+                        <h3 class="about__title">Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus
                             lorem eget,
                             egestas eros.
-                            Maecenas eleifend erat at justo fringilla.</p>
-                        <p class="about__text-medium">
+                            Maecenas eleifend erat at justo fringilla.</h3>
+                        <p class="about__text">
                             Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in imperdiet
                             placerat.
                             Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt.
@@ -45,40 +45,15 @@
                         Aliquam erat volutpat. Aenean accumsan.
                         </p>
                     
-                        <button class="white-button about__button js-open-modal" data-modal="1">Read more
+                        <button class="white-button about__button js-open-modal" data-modal="2">Read more
                             <svg class="button__icon" width="7px" height="10px">
                                 <use href="./images/icons.svg#icon-white-button"></use>
                             </svg>
                         </button>
                     </div>
         </div>
-        
-<!-- Модалка -->
-        <div class="modal about-modal" data-modal="1">
-            <!--   Svg иконка для закрытия окна  -->
-            <svg class="modal__cross js-modal-close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                <path
-                    d="M23.954 21.03l-9.184-9.095 9.092-9.174-2.832-2.807-9.09 9.179-9.176-9.088-2.81 2.81 9.186 9.105-9.095 9.184 2.81 2.81 9.112-9.192 9.18 9.1z" />
-            </svg>
-                    <h2 class="section__title">
-                        <span class="modal--white section__subtitle ">tradition and love</span>
-                        how it’s made?
-                    </h2>
-            <p class="about__text-medium modal--white">Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus
-                            lorem eget,
-                            egestas eros.
-                            Maecenas eleifend erat at justo fringilla.</p>
-            <p class="about__text-medium modal--white">
-                            Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in imperdiet
-                            placerat.
-                            Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt.
-                            <br>
-                            <br>
-                        Aliquam erat volutpat. Aenean accumsan.
-            </p>
-        </div>
-<!-- /Модалка -->
-<!-- Подложка под модальным окном -->
-<div class="overlay js-overlay-modal"></div>
     </div>
 </section>
+
+<!-- Модалка about-->
+<include src="./partials/components/about-modal.html"></include>
