white text modal

--- a/src/partials/components/about-modal.html
+++ b/src/partials/components/about-modal.html
@@ -10,11 +10,11 @@
         how it’s made?
     </h2>
 
-    <h3 class="about__title">Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus
+    <h3 class="about__title modal--white">Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus
         lorem eget,
         egestas eros.
         Maecenas eleifend erat at justo fringilla.</h3>
-    <p class="about__text">
+    <p class="about__text modal--white">
         Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in imperdiet
         placerat.
         Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt.
